# ReadyNest-Enterprise-Analytics-Platform

./: .env  .gitignore  AGENTS.md  LICENSE  README.md  app.py  extract.py  fix_links.py  migrate.py  pyproject.toml  requirements.txt  strip_config.py  temp_loading.py  update_brain.py  update_modules.py  update_router.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
.streamlit/: config.toml
api/: main.py
api/routes/: auth.py  data.py  executive.py
automation/: users.db
brain/: architecture.md  decisions.md  dependency-graph.md  feature-map.md  glossary.md  master-memory.md  memory.md  mistakes.md  patterns.md  roadmap.md
dashboards/powerbi/: README.md  powerbi_views.sql
dashboards/streamlit/: example_app.py
dashboards/tableau/: README.md
data/features/: feature_store_customers.parquet  feature_store_products.parquet
data_lake/clean/: standardized_dataset.parquet
data_lake/curated/: feature_store_customers.parquet  feature_store_products.parquet
deployment/docker/: Dockerfile  docker-compose.yml
deployment/github_actions/: ci_pipeline.yml
deployment/kubernetes/: deployment.yaml  service.yaml
deployment/nginx/: nginx.conf
deployment/terraform/: main.tf
docs/architecture/: data_lake_architecture.md  deployment_guide.md
docs/data_dictionary/: business_glossary.md
docs/user_guide/: dashboard_user_guide.md
frontend-ui/: package-lock.json  package.json  tailwind.config.js
frontend-ui/src/: App.tsx  index.css
web/: package-lock.json  package.json
(+224 files in other folders)
