[tool.poetry]
name = "readynest-insight-engine"
version = "0.1.0"
description = "Enterprise Data Analytics Dashboard"
authors = ["ReadyNest Team"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vercel]
entrypoint = "src/app/main.py"

[tool.pyright]
extraPaths = ["."]
typeCheckingMode = "basic"
reportArgumentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
reportAssignmentType = false
reportPrivateImportUsage = false
